<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/drawing_fl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/pallet_ll"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView android:id="@+id/background_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/backgroundimage"

            />
        <edu.tcu.thongtruong.paint.DrawingView
            android:id="@+id/drawing_view"
            android:background="@color/tint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/pallet_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/action_button_ll"
        app:layout_constraintTop_toBottomOf="@+id/drawing_fl">
        <ImageView
            android:background="@color/black"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/path_color_normal"
            android:contentDescription="@string/blackbutton"
           />
        <ImageView android:background="@color/red"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/path_color_normal"
            android:contentDescription="@string/redbutton"

            />
        <ImageView android:background="@color/green"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/path_color_normal"
            android:contentDescription="@string/greenbutton"

            />
        <ImageView android:background="@color/blue"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/path_color_normal"
            android:contentDescription="@string/bluebutton"

            />
        <ImageView android:background="@color/tcu_purple"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/path_color_normal"
            android:contentDescription="@string/purplebutton"

            />
        <ImageView android:background="@color/white"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/path_color_normal"
            android:contentDescription="@string/whitebutton"

            />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/action_button_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView android:id="@+id/brush_iv"
            android:background="@color/light_gray"
            android:padding="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_brush"
            android:scaleType="centerCrop"
            android:contentDescription="@string/brushimage"

            />
            <ImageView android:id="@+id/gallery_iv"
            android:background="@color/light_gray"
            android:padding="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_gallery"
            android:scaleType="centerCrop"
                android:contentDescription="@string/galleryimage"

                />
        <ImageView
            android:id="@+id/undo_iv"
            android:background="@color/light_gray"
            android:padding="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_undo"
            android:scaleType="centerCrop"
            android:contentDescription="@string/undoimage"

            />
        <ImageView
            android:id="@+id/save_iv"
            android:background="@color/light_gray"
            android:padding="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_save"
            android:scaleType="centerCrop"
            android:contentDescription="@string/saveimage"

            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
